# django-cte

./: setup.cfg  tox.ini
