[bdist_wheel]
universal=1

[metadata]
name = django-cte
version = attr: django_cte.__version__

description=Common Table Expressions (CTE) for Django
long_description = file: README.md
long_description_content_type = text/markdown
maintainer =  Daniel Miller
maintainer_email = millerdev@gmail.com
license = BSD License
url = https://github.com/dimagi/django-cte
project_urls =
    Bug Tracker = https://github.com/dimagi/django-cte/issues
    Repository = https://github.com/dimagi/django-cte
    Documentation = https://github.com/dimagi/django-cte

classifiers =
        Development Status :: 3 - Alpha
        Environment :: Web Environment
        Framework :: Django
        Intended Audience :: Developers
        License :: OSI Approved :: BSD License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =

[options.packages.find]
where = src
